tests/ui/unsupported_binary_op.stderr
[tests/ui/unsupported_binary_op.pea:2:22] error: no method named `sub` found for type `[u8]` in the current scope

[tests/ui/unsupported_binary_op.pea:3:18-3:24] error: mismatched types: expected `[u8]`, found: `i64`

error: aborting due to 2 previous errors

