tests/ui/unsupported_binary_op.pea
fn main() {
    println!(b"3245" - 3);
    println!(3 - b"3245");
}
